platform/addons/backstage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    istio-injection: disabled
    app.kubernetes.io/part-of: sre-platform
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
